third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/positive-bin.stderr
TOML parse error at line 1, column 18
  |
1 | positive-bin = +0b11010110
  |                  ^
expected newline, `#`
